# duck-mc

./: .gitignore  .typos.toml  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  F3_TASKS.md  PROGRESS.md  README.md  SURVEY.md  VELITE_PARITY_REPORT.md  WORKLOG.md  deny.toml  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
dmc-codegen/: Cargo.toml  README.md
dmc-codegen/assets/grammars/: abap.tmLanguage  actionscript-3.tmLanguage  angular-expression.tmLanguage  angular-inline-template.tmLanguage  angular-template-blocks.tmLanguage  angular-template.tmLanguage  angular-ts.tmLanguage  apex.tmLanguage  apl.tmLanguage  applescript.tmLanguage  ara.tmLanguage  asciidoc.tmLanguage  asm.tmLanguage  awk.tmLanguage  bat.tmLanguage  berry.tmLanguage  bibtex.tmLanguage  bird2.tmLanguage  bsl.tmLanguage  c.tmLanguage  c3.tmLanguage  clarity.tmLanguage  clojure.tmLanguage  cobol.tmLanguage  codeowners.tmLanguage  codeql.tmLanguage  coffee.tmLanguage  common-lisp.tmLanguage  coq.tmLanguage  cpp-macro.tmLanguage  crystal.tmLanguage  csharp.tmLanguage  css.tmLanguage  d.tmLanguage  dart.tmLanguage  dax.tmLanguage  desktop.tmLanguage  diff.tmLanguage  dotenv.tmLanguage  (+109 more)
dmc-codegen/codegen-samples/: codegen.rs
dmc-codegen/scripts/: convert-shiki-assets.mjs
dmc-codegen/src/: escape.rs  highlight.rs  html.rs  lib.rs  mdx.rs
dmc-codegen/tests/: hardening_probes.rs  html.rs  mdx_body.rs
dmc-core/: Cargo.toml  README.md
dmc-core/benches/: compile.rs
dmc-core/core-samples/: core.rs  dmc.toml
dmc-core/examples/: bench.rs  flamegraph.rs  flamegraph_consumer.rs  profile.rs
dmc-core/scripts/: load-config.mjs
dmc-core/src/: compile.rs  lib.rs  loaders.rs  main.rs
dmc-core/tests/: classed_css.rs  cli.rs  compile_basic.rs  engine.rs  fuzz_attack.rs  fuzz_round2.rs  fuzz_round3.rs  fuzz_round4.rs  fuzz_round5.rs  fuzz_round6.rs  hardening_probes.rs  mdx_body_accordion.rs  mdx_options.rs  parity.rs  pretty_code_html.rs  robustness.rs  snapshots.rs
dmc-diagnostic/: Cargo.toml  README.md
dmc-diagnostic/src/: lib.rs  metadata.rs  print.rs
dmc-diagnostic/tests/: hardening_probes.rs
dmc-highlight/: Cargo.toml  README.md  build.rs
dmc-highlight/assets/: README.md
dmc-highlight/examples/: highlight_demo.rs
dmc-highlight/scripts/: convert-shiki-assets.mjs
dmc-highlight/src/: lib.rs
dmc-highlight/tests/: hardening_probes.rs
dmc-lexer/: Cargo.toml  LEXER_COMPLIANCE.md  README.md  ROADMAP.md  TOKEN_AUDIT.md
dmc-lexer/lexer-samples/: lex.rs  lexer.rs
dmc-lexer/src/: dispatch.rs  lib.rs  scanner.rs  token.rs  utils.rs
dmc-lexer/tests/: autolink.rs  blocks.rs  expressions.rs  hardening_probes.rs  headings.rs  html_blocks.rs  imports.rs  inline.rs  json_frontmatter.rs  jsx_attrs.rs  jsx_boundary.rs  links.rs  md_comments.rs  mdx_comments.rs  normalization.rs  strike.rs
dmc-napi/: CHANGELOG.md  Cargo.toml  README.md  index.cjs  index.d.ts  index.js  mod.ts  package.json  test-callbacks.mts  tsconfig.json
dmc-napi/src/: lib.rs
dmc-parser/: Cargo.toml  README.md  ROADMAP.md  grammar.txt
dmc-parser/benches/: parse.rs
dmc-parser/parse-samples/: parse.rs
dmc-parser/src/: block.rs  inline.rs  jsx.rs  lib.rs  parser.rs  refs.rs  slugger.rs  table.rs
dmc-parser/tests/: ast_smoke.rs  autolink.rs  basic.rs  breaks.rs  commonmark_spec.rs  diagnostics.rs  fuzz_smoke.rs  gfm.rs  gfm_spec.rs  hardening_probes.rs  html_blocks.rs  indented_code.rs  inline.rs  jsx.rs  lists.rs  setext.rs  structure.rs  tables.rs
dmc-schema/: Cargo.toml  README.md
dmc-schema/src/: asset.rs  compile.rs  ctx.rs  lib.rs  markdown.rs  modifiers.rs  primitives.rs
dmc-schema/tests/: basic.rs  descriptor.rs  hardening_probes.rs
dmc-transform/: Cargo.toml  README.md
dmc-transform/src/: config.rs  lib.rs  pipeline.rs  visit.rs
dmc-transform/tests/: bare_url.rs  component_source.rs  disable_gfm.rs  hardening_probes.rs  math_preprocess.rs  pipeline.rs  pretty_code.rs
dmc-transform/transform-samples/: transform.rs
duck-md-codegen/: Cargo.toml
duck-md-codegen/codegen-samples/: codegen.rs
duck-md-codegen/src/: escape.rs  html.rs  lib.rs  mdx.rs
duck-md-codegen/tests/: html.rs  mdx_body.rs
duck-md-core/: Cargo.toml
duck-md-core/benches/: compile.rs
duck-md-core/scripts/: load-config.mjs
duck-md-core/src/: compile.rs  engine.rs  lib.rs  loaders.rs  main.rs
duck-md-core/tests/: cli.rs  compile_basic.rs  engine.rs  mdx_options.rs  parity.rs  robustness.rs  snapshots.rs
duck-md-core/tmp/: index.mdx
duck-md-diagnostic/: Cargo.toml
duck-md-diagnostic/src/: lib.rs  metadata.rs
duck-md-lexer/: Cargo.toml
duck-md-lexer/error-samples/: E010-unterminated-code-fence.mdx  E010-unterminated-inline-code.mdx  README.md  error.rs
duck-md-lexer/lexer-samples/: lexer.rs
duck-md-lexer/src/: diagnostic.rs  lib.rs  token.rs  utils.rs
duck-md-lexer/tests/: autolink.rs  expressions.rs  imports.rs  jsx_attrs.rs  jsx_boundary.rs  md_comments.rs  strike.rs
duck-md-napi/: Cargo.toml  index.d.ts  index.js  mod.d.ts  mod.js  mod.mjs  mod.ts  package.json  test-callbacks.mjs  test-callbacks.mts  test-loaders.mts  test.mjs  tsconfig.json
duck-md-napi/src/: lib.rs
duck-md-parser/: Cargo.toml  grammar.txt
duck-md-parser/parse-samples/: parse.rs
duck-md-parser/src/: block.rs  inline.rs  jsx.rs  lib.rs  parser.rs  table.rs
duck-md-parser/tests/: ast_smoke.rs  autolink.rs  basic.rs  breaks.rs  gfm.rs  indented_code.rs  inline.rs  jsx.rs  lists.rs  setext.rs  structure.rs  tables.rs
duck-md-schema/: Cargo.toml
duck-md-schema/src/: asset.rs  compile.rs  ctx.rs  error.rs  lib.rs  markdown.rs  modifiers.rs  primitives.rs
duck-md-schema/tests/: basic.rs  descriptor.rs
duck-md-transform/: Cargo.toml
duck-md-transform/src/: lib.rs  pipeline.rs  visit.rs
duck-md-transform/tests/: bare_url.rs  component_source.rs  disable_gfm.rs  pipeline.rs  pretty_code.rs
duck-md-transform/transform-samples/: transform.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_lex.rs  fuzz_parse.rs  fuzz_parse_strict.rs  fuzz_roundtrip.rs
(+570 files in other folders)
