[workspace]
resolver = "3"
members = [
  "dmc-core",
  "dmc-diagnostic",
  "dmc-lexer",
  "dmc-parser",
  "dmc-codegen",
  "dmc-transform",
  "dmc-schema",
  "dmc-napi",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
miette = { version = "5", features = ["fancy"] }
slug = "0.1"
duck-diagnostic = "0.7.1"
globwalk = "0.9"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "redactions"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
criterion = "0.5"

# Workspace crates
dmc-diagnostic = { path = "dmc-diagnostic" }
dmc-lexer = { path = "dmc-lexer" }
dmc-parser = { path = "dmc-parser" }
dmc-codegen = { path = "dmc-codegen" }
dmc-transform = { path = "dmc-transform" }
dmc-schema = { path = "dmc-schema" }
blake3 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
notify = "6"
notify-debouncer-mini = "0.4"
rayon = "1"
base64 = "0.22"
regex = "1"
fancy-regex = "0.16"
unicode-segmentation = "1"

# Dev
pretty_assertions = "1"
