[workspace]
resolver = "3"
members = [
  "dmc-core",
  "dmc-diagnostic",
  "dmc-lexer",
  "dmc-parser",
  "dmc-highlight",
  "dmc-codegen",
  "dmc-transform",
  "dmc-schema",
  "dmc-napi",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
authors = ["gentleduck"]
repository = "https://github.com/gentleeduck/duck-mc"
homepage = "https://github.com/gentleeduck/duck-mc"
documentation = "https://github.com/gentleeduck/duck-mc/tree/master/dmc-docs"
readme = "README.md"
keywords = ["mdx", "markdown", "compiler", "velite", "dmc"]
categories = ["compilers", "parser-implementations", "text-processing"]

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "2"
miette = { version = "5", features = ["fancy"] }
slug = "0.1"
duck-diagnostic = "0.7.1"
globwalk = "0.9"
tempfile = "3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "redactions"] }
syntect = { version = "5", default-features = false, features = ["default-onig", "plist-load"] }
criterion = "0.5"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "bitmap_encoder"] }

# Workspace crates
dmc-diagnostic = { version = "0.1.0", path = "dmc-diagnostic" }
dmc-lexer = { version = "0.1.0", path = "dmc-lexer" }
dmc-parser = { version = "0.1.0", path = "dmc-parser" }
dmc-highlight = { version = "0.1.0", path = "dmc-highlight" }
dmc-codegen = { version = "0.1.0", path = "dmc-codegen" }
dmc-transform = { version = "0.1.0", path = "dmc-transform" }
dmc-schema = { version = "0.1.0", path = "dmc-schema" }
blake3 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
notify = "6"
notify-debouncer-mini = "0.4"
rayon = "1"
base64 = "0.22"
regex = "1"
fancy-regex = "0.16"
unicode-segmentation = "1"
pulldown-latex = "0.7"
# katex backend differs per platform: quick-js on POSIX (faster), duktape
# on Windows (cross-platform). Per-crate target-conditional deps select.
katex = { version = "0.4", default-features = false }
emojis = "0.8"

# Dev
pretty_assertions = "1"
