[package]
name = "dmc-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
dmc-parser = { path = "../dmc-parser" }
dmc-diagnostic = { workspace = true, features = ["codegen"] }
duck-diagnostic.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "codegen"
path = "codegen-samples/codegen.rs"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["dep:dmc-lexer", "dep:dmc-transform", "dep:serde_json"]

[dependencies.dmc-lexer]
path = "../dmc-lexer"
optional = true

[dependencies.dmc-transform]
path = "../dmc-transform"
optional = true

[dependencies.serde_json]
workspace = true
optional = true
