[package]
name = "dmc-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTML and MDX body emitters for the dmc compiler"

[dependencies]
dmc-parser = { version = "0.1.0", path = "../dmc-parser" }
dmc-diagnostic = { workspace = true, features = ["codegen"] }
duck-diagnostic.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "codegen"
path = "codegen-samples/codegen.rs"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["dep:dmc-lexer", "dep:dmc-transform", "dep:serde_json"]

[dependencies.dmc-lexer]
version = "0.1.0"
path = "../dmc-lexer"
optional = true

[dependencies.dmc-transform]
version = "0.1.0"
path = "../dmc-transform"
optional = true

[dependencies.serde_json]
workspace = true
optional = true
