[package]
name = "dmc-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MDX, JSX, and GFM tokenizer for the dmc compiler"
readme = "README.md"

[dependencies]
duck-diagnostic.workspace = true
dmc-diagnostic = { workspace = true, features = ["lexer"] }
memchr = "2.8.0"

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "lexer"
path = "./lexer-samples/lex.rs"
