[package]
name = "dmc-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NAPI bindings for the @gentleduck/md npm package"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dmc-core = { path = "../dmc-core" }
dmc-diagnostic = { path = "../dmc-diagnostic" }
duck-diagnostic.workspace = true
katex.workspace = true
napi = { version = "2", default-features = false, features = ["napi9", "serde-json"] }
napi-derive = "2"
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
