[package]
name = "dmc-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NAPI bindings for the @gentleduck/md npm package"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dmc-core = { version = "0.3.6", path = "../dmc-core" }
dmc-diagnostic = { version = "0.3.6", path = "../dmc-diagnostic" }
duck-diagnostic.workspace = true
# Pin to napi 2.x; napi 3.x changed the macro internals (ctor,
# register_js_function) and is incompatible with napi-derive 2.x.
# Bump both together when napi-rs publishes matching v3 derive.
napi = { version = "=3.4.0", default-features = false, features = ["napi9", "serde-json"] }
napi-derive = "=2.16.13"
serde.workspace = true
serde_json.workspace = true

# katex backend selected per target. quick-js is faster but POSIX-only.
[target.'cfg(not(target_os = "windows"))'.dependencies]
katex = { workspace = true, features = ["quick-js"] }

[target.'cfg(target_os = "windows")'.dependencies]
katex = { workspace = true, features = ["duktape"] }

[build-dependencies]
napi-build = "2"
