[package]
name = "dmc-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Typed AST parser for the dmc MDX compiler"

[dependencies]
dmc-lexer.workspace = true
dmc-diagnostic = { workspace = true, features = ["lexer", "parser"] }
duck-diagnostic.workspace = true
serde.workspace = true
serde_json.workspace = true
slug.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "parse"
path = "./parse-samples/parse.rs"
