[package]
name = "dmc-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Velite-style schema builders for dmc collection records"
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
slug.workspace = true
thiserror.workspace = true
blake3.workspace = true
image.workspace = true
base64.workspace = true
regex.workspace = true
fancy-regex.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
