[package]
name = "duck-md-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
duck-md-parser = { path = "../duck-md-parser" }
duck-md-diagnostic = { workspace = true, features = ["codegen"] }
duck-diagnostic.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "codegen"
path = "codegen-samples/codegen.rs"
required-features = ["bin"]

[features]
default = ["bin"]
bin = ["dep:duck-md-lexer", "dep:duck-md-transform", "dep:serde_json"]

[dependencies.duck-md-lexer]
path = "../duck-md-lexer"
optional = true

[dependencies.duck-md-transform]
path = "../duck-md-transform"
optional = true

[dependencies.serde_json]
workspace = true
optional = true
