[package]
name = "duck-md-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["cli", "watch", "pretty-code"]
cli = ["dep:clap", "dep:toml"]
watch = ["dep:notify", "dep:notify-debouncer-mini"]
pretty-code = []

[lib]
name = "duck_md"
path = "src/lib.rs"

[[bin]]
name = "duck-md"
path = "src/main.rs"
required-features = ["cli", "watch"]

[dependencies]
duck-md-lexer.workspace = true
duck-diagnostic.workspace = true
duck-md-parser = { path = "../duck-md-parser" }
duck-md-codegen = { path = "../duck-md-codegen" }
duck-md-transform = { path = "../duck-md-transform" }
duck-md-schema = { path = "../duck-md-schema" }
serde_yaml.workspace = true
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
rayon.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
globwalk.workspace = true
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "compile"
harness = false
