[package]
name = "duck-md-diagnostic"
version.workspace = true
edition.workspace = true

# Unified diagnostic codes for the duck-md pipeline. Variants are gated by
# per-layer features so each crate only pulls in the codes it actually emits.
# Cargo unifies features across a workspace build, so a top-level crate that
# enables `lexer + parser + transform` ends up with the full enum.
[features]
default = []
lexer = []
parser = []
transform = []
codegen = []

[dependencies]
duck-diagnostic.workspace = true
serde.workspace = true
