[package]
name = "duck-md-lexer"
version.workspace = true
edition.workspace = true

[dependencies]
duck-diagnostic.workspace = true
serde_yaml.workspace = true
serde.workspace = true
unicode-segmentation.workspace = true
memchr = "2.8.0"

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "error"
path = "./error-samples/error.rs"
