[package]
name = "duck-md-lexer"
version.workspace = true
edition.workspace = true

[dependencies]
duck-diagnostic.workspace = true
duck-md-diagnostic = { workspace = true, features = ["lexer"] }
serde_yaml.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-segmentation.workspace = true
memchr = "2.8.0"

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "lexer"
path = "./lexer-samples/lexer.rs"
