[package]
name = "duck-md-parser"
version.workspace = true
edition.workspace = true

[dependencies]
duck-md-ast = { path = "../duck-md-ast" }
duck-md-lexer.workspace = true
duck-diagnostic.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
slug.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
