[package]
name = "duck-md-parser"
version.workspace = true
edition.workspace = true

[dependencies]
duck-md-lexer.workspace = true
duck-md-diagnostic = { workspace = true, features = ["lexer", "parser"] }
duck-diagnostic.workspace = true
serde.workspace = true
serde_json.workspace = true
slug.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "parse"
path = "./parse-samples/parse.rs"
