[package]
name = "duck-md-schema"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
slug.workspace = true
thiserror.workspace = true
blake3.workspace = true
image.workspace = true
base64.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
