[package]
name = "duck-md-transform"
version.workspace = true
edition.workspace = true

[features]
default = ["mermaid", "assets"]
mermaid = []
assets = ["dep:blake3"]

[dependencies]
duck-md-parser = { path = "../duck-md-parser" }
blake3 = { workspace = true, optional = true }
serde_json.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
